--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Mohammad Mahafthah</h1>
             <h4>Communication Engineer</h4>
 
-            <h3>Contact</h3>
+            <h3>Contact Informations</h3>
             <ul>
                 <li><i class="fas fa-mobile-alt"></i><a href="tel:+962777693278">+962777693278</a></li>
                 <li><i class="fas fa-envelope-open-text"></i> <a
@@ -34,10 +34,7 @@
 
         </div>
         <div id="two">
-            <h2> Profile</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur dolore voluptate libero dolores modi,
-                fugit ab ut facilis, porro iure reprehenderit animi vel veniam voluptatibus adipisci. Numquam, repellat.
-                Odit, eveniet.</p>
+          
             <h2>Education</h2>
             <h3>
                 <li>Bachelor Degree in Communication Engineer - YARMOUK UNIVERSITY ( 2015-2020 )</li>
